--- a/README.pod
+++ b/README.pod
@@ -24,6 +24,8 @@ with a transparent fallback to JSON if a callback parameter is not specified.
 The B<render_jsonp> helper renders a Perl reference as JSON, wrapped in a supplied callback.
 If a callback is not supplied, only the JSON structure is returned.
 
+=head2 Explanation
+
 Given the following configuration:
 
   plugin JSONP => callback => 'callback_function';
