--- a/README.pod
+++ b/README.pod
@@ -1,3 +1,5 @@
+=pod
+
 =head1 NAME
 
 Mojolicious::Plugin::JSONP - Render JSONP with transparent fallback to JSON
@@ -77,3 +79,4 @@ Register plugin in L<Mojolicious> application.
 
 L<Mojolicious>, L<Mojolicious::Guides>, L<http://mojolicio.us>.
 
+=cut
